# pg_stream

./: .gitignore  Cargo.toml  LICENSE  README.md  recommendations.md  tasks.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: rust.yml
benches/: pgstream_bench.rs
src/: connect.rs  connection.rs  error.rs  lib.rs  message.rs  pg_stream.rs  pg_stream_proto.rs
src/auth/: cleartext.rs  md5.rs  mod.rs  scram.rs
src/message/: backend.rs  codec.rs  frontend.rs  mod.rs
src/message/backend/: code.rs  io.rs  mod.rs  parse.rs  wrappers.rs
src/message/frontend/: bindable.rs  builders.rs  code.rs  codec.rs  mod.rs  types.rs
src/messages/: backend.rs  frontend.rs
src/startup/: auth.rs  auth_msg.rs  error.rs  mod.rs
tests/: protocol.rs
tests/data/certs/: ca.crt  server.crt  server.key
tests/data/pg/: pg_hba.conf  postgresql.conf
