[package]
name = "pg_stream"
version = "0.2.0"
edition = "2024"
authors = ["Taylor Neely <tneely417@gmail.com>"]
description = "A low-level, zero-overhead Rust implementation of the Postgres wire protocol."
repository = "https://github.com/tneely/pg_stream"
readme = "README.md"
license-file = "LICENSE"
keywords = ["postgresql"]
categories = ["database"]

[features]
default = ["async", "startup"]
async = ["dep:tokio"]
sync = []
startup = ["async"]

[dependencies]
bytes = "1.11"
tokio = { version = "1.49", optional = true, default-features = false, features = ["io-util"] }

# Crypto dependencies for authentication
base64 = "0.22"
hmac = "0.12"
md5 = "0.7"
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
sha2 = "0.10"

[dev-dependencies]
aws-lc-rs = "1"
base64 = "0"
criterion = "0"
ctor = "0"
postgresql_commands = "0"
postgresql_embedded = { version = "0", features = ["tokio", "rustls"] }
tempfile = "3"
rustls = { version = "0", features = ["aws-lc-rs"] }
tokio = "1"
tokio-rustls ={ version = "0", features = ["aws-lc-rs"] }

[[bench]]
name = "pgstream_bench"
harness = false
