[package]
name = "pg_stream"
version = "0.2.1"
edition = "2024"
authors = ["Taylor Neely <tneely417@gmail.com>"]
description = "A low-level, zero-overhead Rust implementation of the Postgres wire protocol."
repository = "https://github.com/tneely/pg_stream"
readme = "README.md"
license = "MIT"
keywords = ["postgresql"]
categories = ["database"]

[features]
default = ["async", "startup"]
async = ["dep:tokio"]
sync = []
startup = ["async", "dep:aws-lc-rs", "dep:base64", "dep:md5"]

[dependencies]
bytes = "1.11"
tokio = { version = "1.49", optional = true, default-features = false, features = ["io-util"] }

# Crypto dependencies for authentication
aws-lc-rs = { version = "1.16.2", optional = true }
base64 ={ version = "0.22", optional = true }
md5 = { version = "0.8", optional = true }

[dev-dependencies]
criterion = "0"
ctor = "0"
postgresql_commands = "0"
postgresql_embedded = { version = "0", features = ["tokio", "rustls"] }
tempfile = "3"
rustls = { version = "0", features = ["aws-lc-rs"] }
tokio = "1"
tokio-rustls ={ version = "0", features = ["aws-lc-rs"] }

[[bench]]
name = "pgstream_bench"
harness = false
